<resources>
    <string name="app_name">ChatboardApp</string>
    <string name="main_title">Chatboard</string>

    <string name="main_subtitle">Chatboard</string>
    <string name="button_exit">Exit</string>
    <string name="developed_by">Developed by Vinícius Manara Martins e Fernando Henry.</string>

    <!-- Strings do Login -->
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="button_login">Entrar</string>
    <string name="label_new_account">Don\'t have an account yet? Create one</string>
    <string name="button_new_account">New Account</string>
    <string name="label_name">Name</string>
    <string name="label_phone">Phone</string>
    <string name="header_new_user">New User</string>
    <string name="menu_home">Home</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_about">About the app</string>
    <string name="welcome_to_app">Welcome to Chatboard!</string>
    <string name="app_version">App Version: 1.0</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_full">Full Version</string>
    <string name="app_demo">Demo Version</string>
    <string name="menu_user">Users List</string>
    <string name="data_added">Data Added</string>
    <string name="data_not_added">Data not Added</string>
</resources>
